[package]
name = "pallet-double-map"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A pallet that demonstrates using a double map in Substrate"
license = "GPL-3.0-or-later"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# parity-scale-codec = { version = "2.0", features = ["derive"], default-features = false }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }

# # Substrate packages
# frame-support = { version = '3.0', default-features = false }
# frame-system = { version = '3.0', default-features = false }
# sp-runtime = { version = '3.0', default-features = false }
# sp-std = { version = '3.0', default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.35" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.35" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.35" }

[dev-dependencies]
# sp-core = '3.0'
# sp-io = '3.0'
# serde = '1.0'
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.35" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.35" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.35" }


# [features]
# default = ['std']
# std = [
# 	'frame-support/std',
# 	'frame-system/std',
# 	'parity-scale-codec/std',
# 	'sp-runtime/std',
# 	'sp-std/std',
# ]

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
# runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
# try-runtime = ["frame-support/try-runtime"]
